testsuite/tests/interpreter_errors/constructor_call/wrong_arity/test.out
script.lkql:1:18: error: Expected 3 arguments but got 2
  1 |  val impossible = new BinOp(
    | __________________^
    ||
    || ~~~ 2 other lines ~~~
    ||
  4 || )
    ||_^
